# 8-fold

./: .gitignore  README.md  app.py  cli.py  pyproject.toml
backend/: __init__.py  orchestrator.py
backend/agents/: __init__.py  fundamentals.py  leadership.py  market_news.py  persona_strategy.py  tech_services.py  visualization.py
backend/db/: client.py  cruds.py  models.py
backend/mcp/: exa_client.py
backend/memory/: mem0_client.py
backend/observability/: __init__.py  langfuse.py
backend/realtime/: __init__.py  session.py
backend/utils/: company_parser.py  scrapper.py
tests/: test_finance_api.py  test_fundamentals_agent.py  test_leadership_agent.py  test_market_news_agent.py  test_mem0.py  test_orchestrator.py  test_perplexity.py  test_tech_services_agent.py  test_visualization_agent.py
ui/: __init__.py  chat_page.py  compare_research.py  realtime_page.py  research_page.py
